@@ -22,7 +22,7 @@ AM_MAKEFLAGS = --no-print-directory
 SUBDIRS = . po
 
 LIBUDEV_CURRENT=13
-LIBUDEV_REVISION=2
+LIBUDEV_REVISION=3
 LIBUDEV_AGE=13
 
 LIBGUDEV_CURRENT=1
